tests/ui/const-generics/mgca/type_const-mismatched-types.stderr
error[E0308]: mismatched types
  --> $DIR/type_const-mismatched-types.rs:4:24
   |
LL | type const FREE: u32 = 5_usize;
   |                        ^^^^^^^ expected `u32`, found `usize`
   |
help: change the type of the numeric literal from `usize` to `u32`
   |
LL - type const FREE: u32 = 5_usize;
LL + type const FREE: u32 = 5_u32;
   |

error[E0308]: mismatched types
  --> $DIR/type_const-mismatched-types.rs:18:22
   |
LL |     type const N: usize = false;
   |                           ^^^^^ expected `usize`, found `bool`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
